fix max height in chrono on small screens

--- a/src/dashboards/Chrono/styles.scss
+++ b/src/dashboards/Chrono/styles.scss
@@ -10,7 +10,6 @@
         .tile {
             width: 100%;
             height: 100%;
-            max-height: 75vh;
             overflow-y: scroll;
         }
     }
@@ -121,15 +120,15 @@
 
         &__tiles {
             display: block;
+
+            .tile {
+                margin-bottom: 1rem;
+                width: 100%;
+            }
         }
 
-        .tile {
-            margin-bottom: 1rem;
-            max-height: unset;
-            width: 100%;
-        }
         .react-grid-item > .react-resizable-handle {
-            visibility: hidden;
+            visibility: hidden;            
         }
     }
 }
